fixed weird footer bug on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ footer {
   color: #58595b;
   padding-top: 50px;
   padding-bottom: 50px;
-  height:200px;
+  height:100%;
   clear:both;
 }
 
